<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".principal.principal_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-80dp"
                android:layout_marginTop="-30dp"
                android:scaleType="fitXY"
                android:scaleX="1"
                android:scaleY="-0.75"
                android:src="@drawable/register_top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/fontfamily"
                    android:text="@string/welcome_principal"
                    android:textColor="@color/black"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:padding="5dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/fontfamily"
                    android:text="@string/welcome_text"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </FrameLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="-70dp"
            android:layout_marginBottom="1dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/joinus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/fontfamily"
                        android:text="@string/register_clean"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="18dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/princi_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="18dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/princi_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="18dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/princi_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/princi_college_select"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_your_college"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fontfamily"
                        android:text="@string/already_registered"
                        android:textColor="@color/black"
                        android:paddingRight="5dp"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/princi_login_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:paddingEnd="3dp"
                        android:fontFamily="@font/fontfamily"
                        android:text="@string/login_link"
                        android:textColor="#0077B6"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <RelativeLayout
            android:id="@+id/princi_register"
            android:layout_width="220dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_blob"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/fontfamily"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="-25dp"
                android:src="@drawable/welcome" />

        </RelativeLayout>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:scaleX="-1.4"
            android:scaleY="6.5"
            android:src="@drawable/register_bottom" />

    </LinearLayout>

</RelativeLayout>